--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-grpc-middleware",
   "dependencies": {
-    "@aeternity/aepp-sdk": "^3.4.0",
+    "@aeternity/aepp-sdk": "^4.1.0",
     "@grpc/proto-loader": "^0.4.0",
     "airgap-coin-lib": "^0.4.4",
     "axios": "^0.19.0",
@@ -12,10 +12,11 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "./node_modules/mocha/bin/mocha --timeout 120000"
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "envfile": "^3.0.0",
     "mocha": "^6.1.4",
     "node-grpc-client": "^1.3.0"
   }
