--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@grpc/proto-loader": "^0.4.0",
     "airgap-coin-lib": "^0.4.4",
     "axios": "^0.19.0",
+    "bidirectional-map": "^1.0.4",
     "google-protobuf": "^3.6.1",
     "grpc": "^1.18.0",
     "knex": "^0.16.3",
