--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bignumber.js": "^9.0.0",
     "google-protobuf": "^3.6.1",
     "grpc": "^1.18.0",
+    "grpc-errors": "^1.1.1",
     "knex": "^0.16.3",
     "pg": "^7.8.0"
   },
