--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
     "@aeternity/aepp-sdk": "^4.2.0",
     "@grpc/proto-loader": "^0.4.0",
     "bignumber.js": "^9.0.0",
+    "dotenv": "^8.0.0",
     "google-protobuf": "^3.6.1",
     "grpc": "^1.18.0",
     "grpc-errors": "^1.1.1",
     "knex": "^0.16.3",
+    "lodash": "^4.17.15",
     "pg": "^7.8.0"
   },
   "scripts": {
     "start": "node index.js",
-    "test": "./node_modules/mocha/bin/mocha --timeout 120000"
+    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha --timeout 120000"
   },
   "devDependencies": {
     "chai": "^4.2.0",
