todo: run migrations when booting server

--- a/.env.full.sample
+++ b/.env.full.sample
@@ -1,8 +1,27 @@
 NODE_ENV=[local, testnet, mainnet]
             - if omitted defaults to local
 
+/*** GRPC server config ****/
+
 GRPC_URL=[url on which the grpc server will listen]
             - if omitted defaults to localhost:50055
+
+
+/*** Database config ****/
+
+DB_HOST=[url to database]
+            - if omitted defaults to 127.0.0.1
+DB_PORT=[database port]
+            - if omitted defaults to 5432
+DB_USER=[database username]
+            - if omitted it will default to ae_middleware_local/ae_middleware_testnet/ae_middleware_mainnet depending on NODE_ENV
+DB_PASSWORD=[database password]
+            - if omitted it will default to 'password'
+DB_NAME=[database name]
+            - if omitted it will default to ae_middleware_local/ae_middleware_testnet/ae_middleware_mainnet depending on NODE_ENV
+
+
+/*** Aeternity node config ***/
 
 NODE_URL=[ae node url]
             - if omitted it will default to local/test/main ae network depending on NODE_ENV
