--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@grpc/proto-loader": "^0.4.0",
     "bignumber.js": "^9.0.0",
     "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-actuator": "^1.1.0",
     "google-protobuf": "^3.6.1",
     "grpc": "^1.18.0",
     "grpc-errors": "^1.1.1",
@@ -14,7 +16,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha --timeout 120000"
+    "test": "NODE_ENV=local ./node_modules/mocha/bin/mocha --timeout 120000"
   },
   "devDependencies": {
     "chai": "^4.2.0",
