--- a/.env.full.sample
+++ b/.env.full.sample
@@ -1,10 +1,16 @@
 NODE_ENV=[local, testnet, mainnet]
             - if omitted defaults to local
 
-/*** GRPC server config ****/
+/*** GRPC server config ***/
 
 GRPC_URL=[url on which the grpc server will listen]
             - if omitted defaults to localhost:50055
+
+
+/*** HTTP server config ***/
+
+HTTP_PORT=[port number]
+            - if omitted defaults to 50056
 
 
 /*** Database config ****/
