Extracted gift amount to config file.

--- a/.env.full.sample
+++ b/.env.full.sample
@@ -54,3 +54,9 @@ EUR_OWNER=[address of new eur owner to transfer ownership of newly deployed EUR 
     - these are only taken into account if service has to deploy new contracts, so if COOP_ADDRESS and EUR_ADDRESS are not provided!
     - if ommited, no transfer of ownership will be performed for newly deployed contracts, therefore supervisor will remain owner on both
 
+
+/*** Other ***/
+
+GIFT_AMOUNT=[amount of AE tokens to automatically send to newly activated user wallets]
+    - default value: 0.3
+
