--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "node-grpc-middleware",
+  "version": "0.0.3",
   "dependencies": {
     "@aeternity/aepp-sdk": "^4.2.0",
     "@grpc/proto-loader": "^0.4.0",
@@ -16,7 +17,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "NODE_ENV=local ./node_modules/mocha/bin/mocha --timeout 120000"
+    "test": "NODE_ENV=local GIFT_AMOUNT=0.3 ./node_modules/mocha/bin/mocha --timeout 120000"
   },
   "devDependencies": {
     "chai": "^4.2.0",
