--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grpc-errors": "^1.1.1",
     "knex": "^0.16.3",
     "lodash": "^4.17.15",
-    "pg": "^7.8.0"
+    "pg": "^7.8.0",
+    "prom-client": "^11.5.3"
   },
   "scripts": {
     "start": "node index.js",
