--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "dependencies": {
     "@aeternity/aepp-sdk": "^4.2.0",
     "@grpc/proto-loader": "^0.4.0",
+    "@hpidcock/node-grpc-interceptors": "0.0.9",
     "bignumber.js": "^9.0.0",
+    "cls-hooked": "^4.2.2",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "express-actuator": "^1.1.0",
+    "express-actuator": "^1.1.2",
     "google-protobuf": "^3.6.1",
     "grpc": "^1.18.0",
     "grpc-errors": "^1.1.1",
+    "grpc-middleware": "^1.1.0",
     "knex": "^0.16.3",
     "lodash": "^4.17.15",
     "pg": "^7.8.0",
-    "prom-client": "^11.5.3"
+    "prom-client": "^11.5.3",
+    "uuidv4": "^5.0.0",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^3.10.0"
   },
   "scripts": {
     "start": "node index.js",
