--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "knex": "^0.16.3",
     "lodash": "^4.17.15",
     "pg": "^7.8.0",
+    "pg-boss": "^3.1.7",
     "prom-client": "^11.5.3",
     "uuidv4": "^5.0.0",
     "winston": "^3.2.1",
