added db ssl env variable

--- a/.env.full.sample
+++ b/.env.full.sample
@@ -25,7 +25,8 @@ DB_PASSWORD=[database password]
             - if omitted it will default to 'password'
 DB_NAME=[database name]
             - if omitted it will default to ae_middleware_local/ae_middleware_testnet/ae_middleware_mainnet depending on NODE_ENV
-
+DB_SSL=[true/false]
+            - default value: false
 
 /*** Aeternity node config ***/
 
